<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EPUB3 Reader</string>
    <color name="dark_grey">#696969</color>
    <string name="Open_Book_1">Open Book 1</string>
    <string name="Open_Book_2">Open Book 2</string>
    <string name="Enable_Parallel_Texts">Enable Parallel Texts</string>
    <string name="Toggle_Sync_Views">Toggle Sync Views</string>
    <string name="Reset_Sync_Views">Reset Sync Views</string>
    <string name="Show_Metadata">Show Metadata</string>
    <string name="Refresh">Refresh</string>
    <string name="From_Book_1">From Book 1</string>
    <string name="From_Book_2">From Book 2</string>
    <string name="Sync_Book_1_with_Book_2">Sync Book 1 with Book 2</string>
    <string name="Sync_Book_2_with_Book_1">Sync Book 2 with Book 1</string>
    <string name="Book_1">Book 1</string>
    <string name="Book_2">Book 2</string>
    <string name="bookOpen">bookOpen</string>
    <string name="Table_of_Contents">Table of Contents</string>
    <string name="Change_Size">Change Panel Size</string>
    <string name="error_LoadPage">Can not load the page</string>
    <string name="error_LoadBook">Cannot load the book</string>
    <string name="error_onlyOneBookOpen">Only one book open!</string>
    <string name="error_cannotSynchronize">Cannot synchronize!</string>
    <string name="error_metadataNotFound">Metadata not found!</string>
    <string name="error_tocNotFound">Table of Contents not Found!</string>
    <string name="error_cannotChangeSizes">Can not change sizes!</string>
    <string name="url">url</string>
    <string name="bpath">bpath</string>
    <string name="invisible">invisible</string>
    <string name="second">second</string>
    <string name="time">time</string>
    <string name="error_cannotTurnPage">Cannot turn Page!</string>
    <string name="tome">tome</string>
    <string name="lang">lang</string>
    <string name="error_noOtherLanguages">No other languages!</string>
    <string name="firstState">FirstState</string>
    <string name="secondState">SecondState</string>
    <string name="firstViewSize">firstViewSize</string>
    <string name="error_cannotLoadState">Cannot load the application/book state</string>
    <string name="metadata">Metadata</string>
    <string name="textOrHTML">text/html</string>
    <string name="onlyOne">onlyOne</string>
    <string name="sync">sync</string>
    <string name="page1">page1</string>
    <string name="CurrentPageBook1">CurrentPageBook1</string>
    <string name="LanguageBook1">LanguageBook1</string>
    <string name="pathBook1">pathBook1</string>
    <string name="error_CannotCloseStream">Cannot close stream!</string>
    <string name="Book1_Stream">Book1 Stream</string>
    <string name="nameEpub1">nameEpub1</string>
    <string name="page2">page2</string>
    <string name="CurrentPageBook2">CurrentPageBook2</string>
    <string name="LanguageBook2">LanguageBook2</string>
    <string name="pathBook2">pathBook2</string>
    <string name="nameEpub2">nameEpub2</string>
    <string name="Book2_Stream">Book2 Stream</string>
    <string name="error_goToPage">goToPage error:</string>
    <string name="full_path">full-path</string>
    <string name="zip">.zip</string>
    <string name="htmlBodyTableOpen">&lt;html&gt;&lt;body&gt;&lt;table&gt;</string>
    <string name="titlesMeta">&lt;tr&gt;&lt;td&gt;Titles:&lt;/td&gt;</string>
    <string name="authorsMeta">&lt;tr&gt;&lt;td&gt;Authors:&lt;/td&gt;</string>
    <string name="contributorsMeta">&lt;tr&gt;&lt;td&gt;Contributors:&lt;/td&gt;</string>
    <string name="languageMeta">&lt;tr&gt;&lt;td&gt;Language:&lt;/td&gt;&lt;td&gt;</string>
    <string name="publishersMeta">&lt;tr&gt;&lt;td&gt;Publishers:&lt;/td&gt;</string>
    <string name="typesMeta">&lt;tr&gt;&lt;td&gt;Types:&lt;/td&gt;</string>
    <string name="descriptionsMeta">&lt;tr&gt;&lt;td&gt;Descriptions:&lt;/td&gt;</string>
    <string name="rightsMeta">&lt;tr&gt;&lt;td&gt;Rights:&lt;/td&gt;</string>
    <string name="tablebodyhtmlClose">&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="tocReference">&lt;tr&gt;&lt;td&gt;Table of Contents:&lt;/td&gt;</string>
    <string name="change_Font">Change Font</string>
    <string name="change_Font_Color">Font Color:</string>
    <string name="changeStyle">Change Style</string>
    <string name="blue_rgb">#0000ff</string>
    <string name="red_rgb">#ff0000</string>
    <string name="green_rgb">#00ff00</string>
    <string name="black_rgb">#000000</string>
    <string name="white_rgb">#ffffff</string>
    <string name="error_CannotChangeStyle">Cannot Change Style!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="SetSizeTitle">First Panel Size:</string>
    <string name="LanguageChooserTitle">Choose two languages:</string>
    <string name="parallelTextBool">parallelTextBool</string>
    <string-array name="ColorFont">
        <item >Black</item>
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
        <item >White</item>
    </string-array>
        <string name="ChangeBackgroundColor">Background Color:</string>
        <string-array name="ColorBack">
            <item >White</item>
            <item >Red</item>
            <item >Green</item>
            <item >Blue</item>
            <item >Black</item>
        </string-array>
            <string name="syncScroll">Sync. Scroll</string>
            <string name="ChangeFont">Font:</string>
            <string-array name="FontStyle">
                <item >Sans Serif</item>
                <item >Serif</item>
                <item >Monospace</item>
            </string-array>
            <string name="Arial">Sans Serif</string>
            <string name="Serif">Serif</string>
            <string name="Monospace">Monospace</string>
            <string name="FontSize">Font Size:</string>
            <string name="LineHeight">Line Height:</string>
            <string name="TextAlign">Alignment:</string>
            <string-array name="testAlignOption">
                <item >Left</item>
                <item >Center</item>
                <item >Right</item>
                <item >Justify</item>
            </string-array>
            <string name="Left_Align">Left</string>
            <string name="Center_Align">Center</string>
            <string name="Right_Align">Right</string>
            <string name="DefaultSettings">Default</string>
            <string name="px">px</string>
            <string name="open">Open...</string>
            <string name="Margin">Margin(px):</string>
            <string-array name="FontSize">
                <item >100%</item>
                <item >125%</item>
                <item >150%</item>
                <item >175%</item>
                <item >200%</item>
                <item >90%</item>
            </string-array>
            <string-array name="LineHeight">
                <item >1em</item>
                <item >1.25em</item>
                <item >1.5em</item>
                <item >1.75em</item>
                <item >2em</item>
                <item >0.9em</item>
            </string-array>
            <string name="Justify">Justify</string>
            <string-array name="Margin">
                <item >0</item>
                <item >5</item>
                <item >10</item>
                <item >15</item>
                <item >20</item>
                <item >25</item>
            </string-array>
</resources>